--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/iosKeys/ioskey.properties=UTF-8
 encoding//src/jdbc/jdbc.properties=UTF-8
 encoding//src/redis/redis.properties=UTF-8
 encoding//src/socket/socket.properties=UTF-8
