--- a/src/socket/socket.properties
+++ b/src/socket/socket.properties
@@ -3,6 +3,6 @@ ip=192.168.1.144
 #本机 socket端口
 port=8888
 #socket or websocket
-nettype=websocket
+nettype=socket
 #缓存类型 redis or database or 空
-cachetype=database
+cachetype=
