--- a/src/socket/socket.properties
+++ b/src/socket/socket.properties
@@ -1,8 +1,7 @@
-#本机IP 单服务不需要配置
-ip=192.168.1.144
+ip=192.168.1.27
 #本机 socket端口
 port=8888
 #socket or websocket
-nettype=socket
+nettype=websocket
 #缓存类型 redis or database or 空
 cachetype=
